| Bug #5504 | Views: a theoretically-updatable view can't be updated | ||
|---|---|---|---|
| Submitted: | 10 Sep 2004 2:19 | Modified: | 8 Oct 2004 9:17 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[10 Sep 2004 2:19]
Peter Gulutzan
[10 Sep 2004 19:07]
Peter Gulutzan
Changed from feature request to non-critical bug
[12 Sep 2004 21:10]
MySQL Verification Team
Verified against latest 5.0 BK source.
[7 Oct 2004 19:55]
Oleksandr Byelkin
ChangeSet 1.1638 04/10/07 22:54:31 bell@sanja.is.com.ua +5 -0 allow merging views with subqueries in WHERE clause (BUG#5504)
[8 Oct 2004 9:17]
Oleksandr Byelkin
Thank you for bugreport! Bug is fixed, patch is pushed into our source repository.
