allow merging views with subqueries in WHERE clause (BUG#5504)